[tool.poetry]
name = "ponzu-bot"
version = "0.1.0"
description = ""
authors = ["KiyotakaMatsushita <kiyotaka.86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
boto3 = "^1.26.92"
slack-bolt = "^1.16.4"
Flask = "^2.2.3"
python-dotenv = "^1.0.0"
glom = "^23.1.1"
langchain = "^0.1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
